Done the reset password

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,19 @@ section{
     backdrop-filter: blur(15px);
 }
 
+.forgot-password-box{
+    position:relative;
+    width: 400px;
+    height: 450px;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(15px);
+}
+
 h2{
     font-size: 2em;
     color: #fff;
