--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@
 
 section{
     display: flex;
+    flex-direction: column; /* Stack children vertically */
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -16,14 +17,24 @@ section{
     background: url('../images/bg10.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-    animation: animateBg 5s linear infinite;
+    /* animation: animateBg 5s linear infinite; */
 }
 
-@keyframes animateBg {
+.header-title {
+    text-align: center;
+    font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+
+
+/* @keyframes animateBg {
     100%{
         filter: hue-rotate(360deg);
     }
-}
+} */
 
 .login-box{
     position:relative;
@@ -68,11 +79,23 @@ h2{
     position: absolute;
     top: 50%;
     left: 5px;
-    transform: translateY(-50%);
+    transform: translateY(-65%);
     font-size: 1em;
     color: #fff;
     pointer-events: none;
     transition: .5s;
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+    background-color: transparent;
+    color: #fff; /* Adjust color as needed */
+}
+
+
+input:-webkit-autofill {
+    -webkit-text-fill-color: #000 !important; /* Text color in autofill */
+    border-radius: 5px 5px 0 0px;
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
 }
 
 .input-box input:focus~label,
@@ -82,7 +105,7 @@ h2{
 
 .input-box input{
     width: 100%;
-    height: 50px;
+    height: 40px;
     background: transparent;
     border: none;
     outline: none;
