Changes in home

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,37 +1,56 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+body {
+    background-color: #f4f4f4; /* Light gray background */
+    font-family: Arial, sans-serif;
 }
+
+/* Top text section */
+.top-text {
+    background-color: #eb7c15; /* Green background for the top section */
+    color: white;
+    text-align: center;
+    padding: 30px 20px;
+}
+
+.top-text h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+.top-text p {
+    font-size: 1.2em;
+}
+
+/* Position the logout button at the top right corner */
+.inside-home {
+    position: relative;
+    width: 100%;
+}
+
 #logoutButton {
     position: absolute;
     top: 20px;
     right: 20px;
     padding: 10px 20px;
-    background-color: #f44336;
-    color: white;
+    border: 1px solid #b31b48;
+    color: #b31b48;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 #logoutButton:hover {
-    background-color: #d32f2f;
+    background-color: #b31b48 ;
+    color: #fff;
 }
 
 /* Center the form on the page */
 .home {
     display: flex;
-    align-items: center;
-    justify-content: top;
-    height: 100vh;
+    align-items: left;
+    /* justify-content: center;  */
+    height: calc(100vh - 100px); /* Adjust to avoid overlap with the top section */
     flex-direction: column;
-}
-
-.inside-home {
-    position: relative;
-    width: 100%;
+    margin-left: 100px;
 }
 
 /* Style the form */
