--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,27 +14,42 @@ section{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url('../images/bg10.jpg') no-repeat;
+    background: url('../images/bg2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-    /* animation: animateBg 5s linear infinite; */
+    animation: animateBg 5s linear infinite;
+}
+section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity for desired darkness */
+    z-index: 0; /* Place it behind content */
 }
 
+section * {
+    position: relative; /* Ensures content appears above overlay */
+    z-index: 1;
+}
 .header-title {
     text-align: center;
     font-size: 1em;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 5px;
     color: #fff;
 }
 
 
 
-/* @keyframes animateBg {
+@keyframes animateBg {
     100%{
         filter: hue-rotate(360deg);
     }
-} */
+}
 
 .login-box{
     position:relative;
