--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,12 +13,15 @@ body {
 }
 
 .navbar{
+    /* position: sticky; */
     width: 85%;
+    top: 0;
     margin: auto;
     padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* z-index: 1000; */
 }
 
 .logo{
