--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,6 +88,7 @@ h2{
     width: 310px;
     margin: 30px 0;
     border-bottom: 2px solid #fff;
+    z-index: 1;
 }
 
 .input-box label {
@@ -135,6 +136,11 @@ input:-webkit-autofill {
     color: #fff;
     font-size: 1.2em;
     line-height: 57px;
+    z-index: 2;
+}
+
+.input-box #eye-icon{
+    cursor: pointer;
 }
 
 .remember-forgot{
