--- a/public/css/home.css
+++ b/public/css/home.css
@@ -156,6 +156,7 @@ section {
 #fitness-plan,
 #nutrition-plan,
 #payment,
+#team,
 #contact-us {
     width: 100%;
     height: 100vh;
@@ -166,7 +167,7 @@ section {
 #fitness-plan{
     width: 100%;
     height: 100vh;
-    background-color: #333;
+    background-color: #222;
     text-align: center;
 }
 
@@ -331,7 +332,7 @@ em{
 #nutrition-plan{
     width: 100%;
     height: 100vh;
-    background-color: #222;
+    background-color: #333;
     text-align: center;
 }
 
@@ -345,6 +346,92 @@ em{
     color: #fff;
     text-align: center;
 }
+
+#team {
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #222;
+    height: 70vh;
+}
+
+
+.team-section { 
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #f9f9f9;
+}
+
+.team-section h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+.team-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.team-member {
+    background-color: #333;
+    border-radius: 10px;
+    padding: 20px;
+    width: 250px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(41, 137, 148, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.team-member:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.team-member img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-bottom: 15px;
+}
+
+.team-member h3 {
+    font-size: 1.5rem;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.team-member p {
+    color: #ccc;
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+
+.team-member .social_icon {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.team-member .social_icon li {
+    list-style: none;
+}
+
+.team-member .social_icon li a {
+    font-size: 1.5rem;
+    color: #fff;
+    transition: transform 0.3s, color 0.3s;
+}
+
+.team-member .social_icon li a:hover {
+    transform: translateY(-5px);
+    color: #01dbc2;
+}
+
+
 
 #payment {
     text-align: center;
